<?xml version="1.0"?>
<package format="2">
  <name>rc110_behavior</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 behavior</description>

  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>

  <license>Copyright (C) 2020 - present ZMP Inc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>rc110_drive_control</depend>
</package>
