<?xml version="1.0"?>
<package format="2">
  <name>rc110_drive_control</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 drive control</description>

  <maintainer email="andrei.pak@zmp.co.jp">andrei</maintainer>

  <license>Copyright (C) 2020 - present ZMP Inc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
