<?xml version="1.0"?>
<package format="2">
  <name>rc110_drive_control</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 drive control</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rc110_msgs</depend>
</package>
