<?xml version="1.0"?>
<package format="2">
  <name>rc110_launch</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 launcher</description>

  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>

  <license>Copyright (C) 2020 - present ZMP Inc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>cv_camera</depend>
  <depend>hokuyo_node</depend>
  <depend>joy</depend>
  <depend>rc110_drive_control</depend>
  <depend>rc110_behavior</depend>
  <depend>rc110_teleop</depend>
</package>
