<?xml version="1.0"?>
<package format="2">
  <name>rc110_launch</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 launcher</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>

  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>hokuyo_node</exec_depend>
  <exec_depend>imu_complementary_filter</exec_depend>
  <exec_depend>imu_tools</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <exec_depend>rc110_drive_control</exec_depend>
  <exec_depend>rc110_behavior</exec_depend>
  <exec_depend>rc110_teleop</exec_depend>
</package>
