<?xml version="1.0"?>
<package format="2">
  <name>rc110_rviz</name>
  <version>1.2.0</version>
  <description>RoboCar 1/10 rviz tools</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>rviz</depend>
  <depend>std_srvs</depend>
  <depend>topic_tools</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rc110_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Needed for camera in rviz -->
  <exec_depend>compressed_image_transport</exec_depend>

  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
