<?xml version="1.0"?>
<package format="2">
  <name>rc110_service</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 service</description>

  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>

  <license>Copyright (C) 2020 - present ZMP Inc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rc110_launch</exec_depend>
</package>
