<?xml version="1.0"?>
<package format="2">
  <name>rc110_service</name>
  <version>1.2.0</version>
  <description>RoboCar 1/10 service</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rc110_launch</exec_depend>
</package>
