<?xml version="1.0"?>
<package format="2">
  <name>rc110_teleop</name>
  <version>1.0.0</version>
  <description>RoboCar 1/10 teleop</description>

  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>

  <license>Copyright (C) 2020 - present ZMP Inc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>rc110_msgs</depend>
  <depend>joy</depend>
</package>
