<?xml version="1.0"?>
<package format="2">
  <name>rc110_laserscans_to_pointcloud</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 Conversion from LaserScan to PointCloud2</description>

  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>

  <license>Copyright (C) 2021 - present ZMP Inc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>

  <depend>laser_geometry</depend>
  <depend>roscpp</depend>
</package>
