<?xml version="1.0"?>
<package format="2">
  <name>param_tools</name>
  <version>1.11.0</version>
  <description>ROS Parameter Tools</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
