<?xml version="1.0"?>
<package format="2">
  <name>rc110</name>
  <version>2.0.0</version>
  <description>RoboCar 1/10 Common Launch</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rc110_laserscans_to_pointcloud</exec_depend>
  <exec_depend>rc110_selector</exec_depend>
  <exec_depend>rc110_topic_tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>rc110_topic_tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>