<?xml version="1.0"?>
<package format="2">
  <name>rc110_common</name>
  <version>1.6.1</version>
  <description>RoboCar 1/10 Common Launch</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rc110_teleop</exec_depend>
</package>
