<?xml version="1.0"?>
<package format="2">
  <name>rc110_launch</name>
  <version>1.4.0</version>
  <description>RoboCar 1/10 launcher</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>hokuyo_node</exec_depend>
  <exec_depend>imu_tools</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>camera_calibration</exec_depend>

  <exec_depend>rc110_common</exec_depend>
  <exec_depend>rc110_drive_control</exec_depend>
  <exec_depend>rc110_master_hold</exec_depend>
</package>
