<?xml version="1.0"?>
<package format="2">
  <name>rc110_msgs</name>
  <version>1.8.0</version>
  <description>RoboCar 1/10 launcher</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
