<?xml version="1.0"?>
<package format="2">
  <name>rc110_rviz</name>
  <version>1.12.0</version>
  <description>RoboCar 1/10 rviz tools</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>

  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rc110_msgs</depend>
  <depend>rc110_topic_tools</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>compressed_image_transport</exec_depend>  <!-- Needed for camera in rviz -->
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rc110</exec_depend>
<!--  <exec_depend>rviz_imu_plugin</exec_depend> Not yet ported.-->
  <exec_depend>rviz_video_panel</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
